--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
                     <img class="shopping" src="C:\Users\Scom\OneDrive\Desktop\css trial\project\project pictures\ladywalkingwithabag.jpeg" height="130px" width="100px" alt="shopping">
                 </div> 
 
-           
+           <!-- <div>
+            fhgj
+           </div> -->
         </div>
     </section>
 
